Boolean Apply Clearing custom data layers (bevel weight Weight / Vgroup Data) #94197

Closed
opened 2021-12-17 17:36:31 +01:00 by Em Eckx · 13 comments

System Information
Operating system: Windows 11
Graphics card: 3090

Blender Version
Broken:
2.93.7 - a5b7f9dc90 (LTS)
3.0.0 - f1cca30557 (Stable)
3.1.0 - b7e151d876 (Alpha)

Worked: 2.93.6

Caused by 2eb94f3036

Short description of error
When boolean modifier is applied, bevel weight / vgroup data is removed.
problem only appear with Fast solver. Exact seems fine

Exact steps for others to reproduce the error
Based on the attached .blend file
Open blend,
Apply Boolean Modifier,
Bevel Weight will be reset,
(or: move boolean above bevel, Bevel Weight will be reset as well)

boolean_bug.blend

2.93.6 (working) 2.93.7, 3.0.0, master (broken)
ngwTrOMVie.mp4 4e6S6ETQG8.mp4

To show how vgroup data is being affected by boolean apply

mj2xJy6jMP.mp4

**System Information** Operating system: Windows 11 Graphics card: 3090 **Blender Version** Broken: 2.93.7 - a5b7f9dc9011 (LTS) 3.0.0 - f1cca3055776 (Stable) 3.1.0 - b7e151d876e7 (Alpha) Worked: 2.93.6 Caused by 2eb94f3036 **Short description of error** When boolean modifier is applied, bevel weight / vgroup data is removed. problem only appear with Fast solver. Exact seems fine **Exact steps for others to reproduce the error** Based on the attached .blend file Open blend, Apply Boolean Modifier, Bevel Weight will be reset, (or: move boolean above bevel, Bevel Weight will be reset as well) [boolean_bug.blend](https://archive.blender.org/developer/F12758052/boolean_bug.blend) | 2.93.6 (working) | 2.93.7, 3.0.0, master (broken)| | -- | -- | | [ngwTrOMVie.mp4](https://archive.blender.org/developer/F12758063/ngwTrOMVie.mp4) | [4e6S6ETQG8.mp4](https://archive.blender.org/developer/F12758058/4e6S6ETQG8.mp4) | To show how vgroup data is being affected by boolean apply [mj2xJy6jMP.mp4](https://archive.blender.org/developer/F12758090/mj2xJy6jMP.mp4)
Author

Added subscriber: @masterxeon1001

Added subscriber: @masterxeon1001
Em Eckx changed title from Boolean Apply Clearing Weight Data to Boolean Apply Clearing Weight / Vgroup Data 2021-12-17 17:59:51 +01:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Can reproduce on both 3.0.0 and current master.

Quite unsure if that is expected because message pops up after applying the modifier: Applied modifier was not first, result may not be as expected
And also a regression (works here on 2.93)

I will check.

Hi, thanks for the report. Can reproduce on both 3.0.0 and current master. Quite unsure if that is expected because message pops up after applying the modifier: `Applied modifier was not first, result may not be as expected` And also a regression (works here on 2.93) I will check.
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Found relevant commit which also landed in 2.93 branch: 2eb94f3036

@ideasman42 , can you look at this?

Found relevant commit which also landed in 2.93 branch: 2eb94f3036 @ideasman42 , can you look at this?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Hm, breakage in LTS is not nice (sorry for adding a commit to LTS that caused this).
Will dare setting this to High prio.

Hm, breakage in LTS is not nice (sorry for adding a commit to LTS that caused this). Will dare setting this to High prio.
Philipp Oeser changed title from Boolean Apply Clearing Weight / Vgroup Data to Boolean Apply Clearing custom data layers (bevel weight Weight / Vgroup Data) 2022-01-04 11:56:40 +01:00

Added subscriber: @RomanKuz-4

Added subscriber: @RomanKuz-4

This issue was referenced by 3735e82c27

This issue was referenced by 3735e82c27cfe840db28fef273acd011f42661b3

This issue was referenced by b3fe135854

This issue was referenced by b3fe135854776079353169fc1bbec2eeb8acef00

This issue was referenced by 5d7ac749c5

This issue was referenced by 5d7ac749c5f9246e1d33197ca97f697a24b8a039

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-01-18 11:37:47 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94197
No description provided.